hphp/hack/test/typecheck/iface_require_incompat5.php.exp
File "iface_require_incompat5.php", line 7, characters 19-23:
Incompatible trait/interface requirements (Typing[4110])
File "iface_require_incompat5.php", line 7, characters 25-29:
This is a float
File "iface_require_incompat5.php", line 6, characters 25-27:
It is incompatible with an int
File "iface_require_incompat5.php", line 7, characters 25-29:
Considering that this type argument is invariant with respect to Super
