hphp/hack/test/typecheck/iface_require_incompat5.php
<?hh

class Super<T as num> {}

interface I1 {
  require extends Super<int>;
  require extends Super<float>;
}
